<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Launcher.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:popupTheme="@style/AppTheme.Launcher.PopupOverlay"
                app:theme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_weight="0.8"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/detail_bookmark"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_weight="0.1"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/bookmark"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/baseline_bookmark_border_black_18dp" />

                    <ImageButton
                        android:id="@+id/detail_twitter"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_weight="0.1"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerInside"
                        app:srcCompat="@drawable/bluetwitter" />
                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:id="@+id/progressbar_view"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:indeterminate="true"
                    android:indeterminateDrawable="@drawable/progress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/fetching_news"
                    android:textColor="@color/black" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/detail_news_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/detail_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/detail_content_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/news_image"

                        android:scaleType="centerCrop"
                        android:src="@drawable/fallback_logo"
                        app:layout_constraintTop_toBottomOf="@+id/detail_toolbar" />

                    <TextView
                        android:id="@+id/detail_content_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/detail_section"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_weight="0.5"
                            android:gravity="start"
                            android:text="@string/section"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/detail_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:layout_weight="0.5"
                            android:gravity="end"
                            android:text="@string/date"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/detail_main_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:ellipsize="end"
                        android:maxLines="30"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_view_full_article"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/activity_vertical_margin"
                        android:text="@string/view_full_article" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </com.google.android.material.appbar.AppBarLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>