<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_weather"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:id="@+id/weather_img"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/sunny_weather">

                        <LinearLayout
                            android:layout_width="207dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/City"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/city"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/State"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/state"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/Temperature"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/temperature"
                                android:textColor="@color/white"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/Weather"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/weather"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/progressbar_view"
                    android:layout_width="fill_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:gravity="center"
                    android:visibility="visible"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ProgressBar
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:indeterminate="true"
                            android:indeterminateDrawable="@drawable/progress" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/fetching_news"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#C0C0C0" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_list"
                    android:name="com.example.newsapp.ui.home.HomeFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="80dp"
                    android:visibility="gone"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/card_view_weather"
                    tools:layout_editor_absoluteX="16dp"
                    tools:listitem="@layout/news_item_row" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>